tooling/nargo_cli/tests/snapshots/execution_success/comptime_variable_at_runtime/execute__tests__expanded.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: expanded_code
---
fn main() {
    ();
    println(1);
    ();
    println(2);
}
